tests/res/traits/error_gives_with_conflict.say
// Provide-once: a trait declared by both `with` and `gives` is a collision.
trait Powered { pub fn start() { return "vroom"; } }
type Engine with Powered { init() {} }

type Car with Powered { // error: Trait 'Powered' is provided by both `with` and `gives` — declare it once
    engine gives Powered;
    init() { this.engine = Engine(); }
}
